# Server

./: .gitignore  CMakeLists.txt  README.markdown  client.cpp  client.hpp  config.cfg  server.cpp  setting.hpp  test.py  testclient.sh  update.txt
